--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -19,6 +19,10 @@
 @import "./components/fullWidthBanner.scss";
 @import "./components/404.scss";
 
+// Pages
+@import "./pages/home.scss";
+@import "./pages/lastoria.scss";
+
 // ===============
 // General Styles
 // ===============
@@ -59,73 +63,4 @@ main {
 
 .visible {
   visibility: visible;
-}
-
-// ==================
-// Monior components
-// ==================
-.mobile-cover {
-  display: none;
-  justify-content: center;
-  align-items: center;
-  color: $black;
-  font-weight: 300;
-  font-size: 4vw;
-  text-align: center;
-  height: 50vh;
-  height: calc(var(--vh, 1vh) * 50);
-
-  @media (max-width: $mobile) {
-    display: flex;
-  }
-}
-
-.statement {
-  padding: 19vw 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-
-  @media (max-width: $mobile) {
-    display: none;
-  }
-
-  span {
-    font-family: $displayFont;
-    margin-bottom: 0.6vw;
-    color: $black;
-  }
-}
-
-.covid-notice {
-  padding: 8vw 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-
-  @media (max-width: $mobile) {
-    padding: 20vw 0;
-  }
-
-  span {
-    margin-bottom: 2vw;
-    color: $black;
-  }
-
-  p {
-    max-width: 40vw;
-    margin: 1vw 0;
-
-    @media (max-width: $tablet) {
-      max-width: 50vw;
-    }
-
-    @media (max-width: $mobile) {
-      max-width: 85vw;
-      margin: 2vw 0;
-    }
-  }
 }
